[package]
name = "mdbook-excalidraw"
version = "0.1.0"
authors = ["Divyanshu <help@peachycloudsecurity.com>"]
edition = "2021"
license = "MIT"
description = "mdBook preprocessor for rendering Mermaid diagrams with interactive zoom controls"
repository = "https://github.com/peachycloudsecurity/mdbook-excalidraw"
homepage = "https://github.com/peachycloudsecurity/mdbook-excalidraw"
documentation = "https://docs.rs/mdbook-excalidraw"
readme = "README.md"
keywords = ["mdbook", "mermaid", "diagrams", "preprocessor", "documentation"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "mdbook-excalidraw"
path = "src/bin/mdbook-excalidraw.rs"

[dependencies]
mdbook = "0.4"
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "13"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
pretty_assertions = "1.4"
